FIX POP UP MESSAGE

--- a/templates/base.html
+++ b/templates/base.html
@@ -38,11 +38,11 @@
         </span>
 
     </div>
-    <div class="clearfix"></div>
+
     <section>
     {% if messages %}
             {% for message in messages %}
-                <div class="tn-box tn-box-active tn-box-hoverpause{% if message.tags %} {{ message.tags }}{% endif %}">
+                <div id="front_message"  class="tn-box tn-box-active tn-box-hoverpause{% if message.tags %} {{ message.tags }}{% endif %}">
                     <p>{{ message }}</p>
 {#                    <div class="tn-progress"></div>#}
                 </div>
@@ -56,7 +56,7 @@
 {#        </div>#}
     {% endif %}
     </section>
-
+    <div class="clearfix"></div>
 
     <div id="middle" class="clearfix">
     <div id='sidemenu'>
