--- a/templates/view_profile.html
+++ b/templates/view_profile.html
@@ -32,7 +32,7 @@
     <span class="menu2">{{ form.second_line }}</span><br>
     Town: {{ form.town }}<br>
     Country: {{ form.country }}<br>
-    Zipcode: {{ form.zipcode }}<br>
+    Zipcode: {{ form.zip_code }}<br>
 </span>
 <br>
 <b>Payment Method:</b><br>
