--- a/media/css/main.css
+++ b/media/css/main.css
@@ -50,17 +50,19 @@
     min-height: 80px;
     position:relative;
     display: block;
-    background: #343435;
-    background: -moz-linear-gradient(top, #343435 1%, #4a4a4a 100%);
-    background: -webkit-gradient(linear, left top, left bottom, color-stop(1%,#343435), color-stop(100%,#4a4a4a));
-    background: -webkit-linear-gradient(top, #343435 1%,#4a4a4a 100%);
-    background: -o-linear-gradient(top, #343435 1%,#4a4a4a 100%);
-    background: -ms-linear-gradient(top, #343435 1%,#4a4a4a 100%);
-    background: linear-gradient(top, #343435 1%,#4a4a4a 100%);
+    background: -moz-linear-gradient(top, rgba(20,60,106,1) 0%, rgba(20,60,106,0.97) 26%, rgba(11,71,123,0.93) 58%, rgba(26,95,152,0.87) 100%); /* FF3.6+ */
+    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(20,60,106,1)), color-stop(26%,rgba(20,60,106,0.97)), color-stop(58%,rgba(11,71,123,0.93)), color-stop(100%,rgba(26,95,152,0.87))); /* Chrome,Safari4+ */
+    background: -webkit-linear-gradient(top, rgba(20,60,106,1) 0%,rgba(20,60,106,0.97) 26%,rgba(11,71,123,0.93) 58%,rgba(26,95,152,0.87) 100%); /* Chrome10+,Safari5.1+ */
+    background: -o-linear-gradient(top, rgba(20,60,106,1) 0%,rgba(20,60,106,0.97) 26%,rgba(11,71,123,0.93) 58%,rgba(26,95,152,0.87) 100%); /* Opera 11.10+ */
+    background: -ms-linear-gradient(top, rgba(20,60,106,1) 0%,rgba(20,60,106,0.97) 26%,rgba(11,71,123,0.93) 58%,rgba(26,95,152,0.87) 100%); /* IE10+ */
+    background: linear-gradient(to bottom, rgba(20,60,106,1) 0%,rgba(20,60,106,0.97) 26%,rgba(11,71,123,0.93) 58%,rgba(26,95,152,0.87) 100%); /* W3C */
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#143c6a', endColorstr='#de1a5f98',GradientType=0 ); /* IE6-9 */
+
     -webkit-border-radius: 8px;
-    -webkit-box-shadow: inset 0px 1px 0px 0px rgba(255,255,255, .1), 0px 1px 0px 0px rgba(0,0,0, .1);
-    -moz-box-shadow: inset 0px 1px 0px 0px rgba(255,255,255, .1), 0px 1px 0px 0px rgba(0,0,0, .1);
-    box-shadow: inset 0px 1px 0px 0px rgba(255,255,255, .1), 0px 1px 0px 0px rgba(0,0,0, .1);
+    -webkit-box-shadow: inset 0px 1px 0px 0px rgba(255,255,255, .1), 0px 2px 0px 0px rgba(0,0,0, .1);
+    -moz-box-shadow: inset 0px 1px 0px 0px rgba(255,255,255, .1), 0px 2px 0px 0px rgba(0,0,0, .1);
+    box-shadow: inset 0px 1px 0px 0px rgba(255,255,255, .1), 0px 2px 0px 0px rgba(0,0,0, .1);
+
     clear: both;
 }
 #header-left {
