ADD reflected effect to the logo

--- a/templates/backoffice_base.html
+++ b/templates/backoffice_base.html
@@ -9,7 +9,7 @@
 <div id="container">
     <div id="header" class="clearfix">
     <div id="header-left">
-        <div id="logo" class="clearfix">E-Commerce Store</div>
+        <div id="logo" class="clearfix reflected">E-Commerce Store</div>
         <p id="header-left-right">Back Office</p>
     </div>
     <div id="logo-image">
