--- a/templates/base.html
+++ b/templates/base.html
@@ -10,7 +10,7 @@
 <div id="container">
     <div id="header" class="clearfix">
         <div id="header-left">
-            <div id="logo" class="clearfix">E-Commerce Store</div>
+            <div id="logo" class="clearfix reflected">E-Commerce Store</div>
         </div>
         <div id="logo-image">
             <img src="/media/images/logo.png" height="80"/>
