--- a/media/css/main.css
+++ b/media/css/main.css
@@ -325,3 +325,7 @@ body{
 #front_message{
     z-index: 100;
 }
+
+.reflected {
+    -webkit-box-reflect: below -13px -webkit-gradient(linear, left top, left bottom, from(transparent), color-stop(50%, transparent), to(rgba(255,255,255,0.2)));
+}
