--- a/media/css/main.css
+++ b/media/css/main.css
@@ -329,3 +329,38 @@ body{
 .reflected {
     -webkit-box-reflect: below -13px -webkit-gradient(linear, left top, left bottom, from(transparent), color-stop(50%, transparent), to(rgba(255,255,255,0.2)));
 }
+
+.sexy-button {
+    margin: 5px;
+    -moz-box-shadow:inset 0px 1px 0px 0px #97c4fe;
+    -webkit-box-shadow:inset 0px 1px 0px 0px #97c4fe;
+    box-shadow:inset 0px 1px 0px 0px #97c4fe;
+    background:-webkit-gradient( linear, left top, left bottom, color-stop(0.05, #3d94f6), color-stop(1, #1e62d0) );
+    background:-moz-linear-gradient( center top, #3d94f6 5%, #1e62d0 100% );
+    filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#3d94f6', endColorstr='#1e62d0');
+    background-color:#3d94f6;
+    -moz-border-radius:5px;
+    -webkit-border-radius:5px;
+    border-radius:5px;
+    border:1px solid #337fed;
+    display:inline-block;
+    color:#ffffff;
+    font-family:arial;
+    font-size:12px;
+    font-weight:bold;
+    padding:4px 19px;
+    text-decoration:none;
+    text-shadow:1px 1px 0px #1570cd;
+}.sexy-button:hover {
+     background:-webkit-gradient( linear, left top, left bottom, color-stop(0.05, #1e62d0), color-stop(1, #3d94f6) );
+     background:-moz-linear-gradient( center top, #1e62d0 5%, #3d94f6 100% );
+     filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#1e62d0', endColorstr='#3d94f6');
+     background-color:#1e62d0;
+ }.sexy-button:active {
+      position:relative;
+      top:1px;
+ }
+
+a.user_block:visited{
+    color:#ffffff;
+}
