--- a/templates/base.html
+++ b/templates/base.html
@@ -28,11 +28,11 @@
         <span id='user_block'>
             {% block userblock %}
                 {% if not user.is_authenticated %}
-                    <a href='/login'>Login</a> | <a href='/register'>Register</a>
+                    <a href='/login' class="sexy-button">Login</a> | <a href='/register' class="sexy-button">Register</a>
                 {% else %}
-                    Welcome, {{ user.username }} (<a href="/profile/">profile</a>)<br>
+                    Welcome, <a href="/profile/" class="user_block">{{ user.username }}</a><br>
                     <a href="/cart"><img src="/media/img/cart.jpg" height="15px" /></a>
-                    {{ user.get_profile.point }} pts. | <a href='/logout'>Logout</a>
+                    {{ user.get_profile.point }} pts.  <a href='/logout' class="sexy-button">Logout</a>
                 {% endif %}
             {% endblock %}
         </span>
