--- a/media/css/backoffice_main.css
+++ b/media/css/backoffice_main.css
@@ -210,14 +210,14 @@ a.user_block:visited{
     -moz-box-shadow:inset 0px 1px 0px 0px #97c4fe;
     -webkit-box-shadow:inset 0px 1px 0px 0px #97c4fe;
     box-shadow:inset 0px 1px 0px 0px #97c4fe;
-    background:-webkit-gradient( linear, left top, left bottom, color-stop(0.05, #3d94f6), color-stop(1, #1e62d0) );
-    background:-moz-linear-gradient( center top, #3d94f6 5%, #1e62d0 100% );
-    filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#3d94f6', endColorstr='#1e62d0');
-    background-color:#3d94f6;
+    background:-webkit-gradient( linear, left top, left bottom, color-stop(0.05, #2d4d9c), color-stop(1, #5a8cbd) );
+    background:-moz-linear-gradient( center top, #2d4d9c 5%, #5a8cbd 100% );
+    filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#2d4d9c', endColorstr='#5a8cbd');
+    background-color:#2d4d9c;
     -moz-border-radius:5px;
     -webkit-border-radius:5px;
     border-radius:5px;
-    border:1px solid #337fed;
+    border:1px solid #3866a3;
     display:inline-block;
     color:#ffffff;
     font-family:arial;
