--- a/templates/view_cart.html
+++ b/templates/view_cart.html
@@ -28,14 +28,14 @@ Total: ${{ total_price }}/{{ total_point }}pts.
 <br>
 
 <div class="float_left">
-    <a href="/checkout">Checkout</a>
+    <a href="/checkout" class="sexy-button">Checkout</a>
 </div>
 
 <div class="float_left">
-    <a href="/">Add some more</a>
+    <a href="/" class="sexy-button">Add some more</a>
 </div>
 
 <div class="float_left">
-    <a href="/clear_cart">Clear Cart</a>
+    <a href="/clear_cart" class="sexy-button">Clear Cart</a>
 </div>
 {% endblock %}
