add sexy button !!

--- a/templates/managestock.html
+++ b/templates/managestock.html
@@ -23,7 +23,9 @@
             {% else %}
             -
             {% endif %}
-            <input type="submit" value="submit"/>
+
+
+            <input type="submit" value="submit"div class="sexy-button"/>
         </form>
     </div>
     {% endfor %}
