--- a/templates/packingDetail.html
+++ b/templates/packingDetail.html
@@ -27,7 +27,7 @@
         {% endif %}
 
         {% endfor %}
-        <input type="submit" value='commit' />
+        <input type="submit" value='commit' div class="sexy-button"/>
     </form>
 
 </div>
