--- a/templates/edit_supplier.html
+++ b/templates/edit_supplier.html
@@ -9,7 +9,7 @@
         <p>edit category: {{ sid }}</p>
         <p>company name: {{ form.company_name }}</p>
         <p>contact: {{ form.contact }}</p>
-        <input type="submit" value="Submit">
+        <input type="submit" value="Submit"div class="sexy-button">
     </form>
 </body>
 </html>
