--- a/templates/packing.html
+++ b/templates/packing.html
@@ -3,13 +3,16 @@
 {% block title %}Packing Management{% endblock %}
 
 {% block content %}
-<h1>Packing List</h1>
+<h1 xmlns="http://www.w3.org/1999/html">Packing List</h1>
 
 <table id="packing"><tr><th>Order ID</th><th>Ordered Date</th><th>Status</th><th>Action</th></tr>
 {% for order in list %}
     <tr><td>{{ order.id }}</td><td>{{ order.timestamp }}</td><td>{{ order.status }}</td><td><form action="/backoffice/packing/{{ order.id }}">
         {% csrf_token %}
-        <input type="submit" value="Proceed">
+
+        <input type="submit" value="Proceed" div class="sexy-button">
+
+
     </form></td></tr>
 {% endfor %}
 </table>
