add more sexy button !!

--- a/templates/add_supplier.html
+++ b/templates/add_supplier.html
@@ -15,7 +15,7 @@
         <p>add new supplier</p>
         <p>company name: {{ form.company_name }}</p>
         <p>contact: {{ form.contact }}</p>
-        <input type="submit" value="Submit">
+        <input type="submit" value="Submit" class="sexy-button">
     </form>
 </body>
 </html>
