--- a/templates/login_employee.html
+++ b/templates/login_employee.html
@@ -12,7 +12,7 @@
 <form action="/backoffice/login" method="post">
     {% csrf_token %}
     {{ form.as_p }}
-    <input type="submit" value="Log In" />
+    <input type="submit" value="Log In" div class="sexy-button"/>
 </form>
 </body>
 {% endblock %}
