--- a/templates/login_user.html
+++ b/templates/login_user.html
@@ -22,6 +22,6 @@
     password:
     <input type="password" name="password" value="" /><br />
 
-    <input type="submit" value="Log In" />
+    <input type="submit" value="Log In" div class="sexy-button"/>
 </form>
 {% endblock %}
