--- a/templates/view_product.html
+++ b/templates/view_product.html
@@ -26,7 +26,7 @@
             {% csrf_token %}
             Quantity:
             <input type=int name="amount" value=1 size=3/>
-            <input type="submit" value="ADD TO CART!" />
+            <input type="submit" value="ADD TO CART!"  class="sexy-button"/>
         </form>
     </span>
     <span class="endfloat"></span>
