--- a/templates/add_category.html
+++ b/templates/add_category.html
@@ -14,6 +14,6 @@
         <p>name: {{ form.name }}</p>
         <p>description:</p>
         <p>{{ form.description }}</p>
-        <input type="submit" value="Submit" />
+        <input type="submit" value="Submit" class="sexy-button" />
     </form>
 {% endblock %}
