--- a/templates/add_product.html
+++ b/templates/add_product.html
@@ -23,6 +23,6 @@
         <p>image: {{ form.image }}</p>
         <p>amount: {{ form.amount }}</p>
         <p>order supply status: {{ form.orderSupStatus }}</p>
-        <input type="submit" value="submit" />
+        <input type="submit" value="submit"  class="sexy-button"/>
     </form>
 {% endblock %}
