--- a/templates/register_user.html
+++ b/templates/register_user.html
@@ -5,6 +5,6 @@
 <form action="/register" method="post">
     {% csrf_token %}
     {{ form.as_p }}
-    <input type="submit" value="Register"/>
+    <input type="submit" value="Register"div class="sexy-button"/>
 </form>
 {% endblock %}
