--- a/templates/base.html
+++ b/templates/base.html
@@ -13,7 +13,7 @@
             <div id="logo" class="clearfix reflected">E-Commerce Store</div>
         </div>
         <div id="logo-image">
-            <img src="/media/images/logo.png" height="80"/>
+            <a href="/"><img src="/media/images/logo.png" height="80"/></a>
 
         </div>
         {% block search_bar %}
