--- a/templates/login_employee.html
+++ b/templates/login_employee.html
@@ -11,8 +11,18 @@
 
 <form action="/backoffice/login" method="post">
     {% csrf_token %}
-    {{ form.as_p }}
-    <input type="submit" value="Log In" div class="sexy-button"/>
+    {% if next %}
+        <input type="hidden" name="next" value="{{ next }}" />
+    {% endif %}
+    <table border="0px">
+        <tr><td>Username</td>
+            <td> <input type="text" name="username" value="{{ username}}" /></td>
+        </tr><tr><td>Password</td>
+        <td><input type="password" name="password" value="" /></td>
+    </tr><tr><td></td><td align='right'>
+        <input type="submit" value="Log In" div class="sexy-button"/></td>
+    </tr>
+    </table>
 </form>
 </body>
 {% endblock %}
