--- a/templates/login_user.html
+++ b/templates/login_user.html
@@ -17,11 +17,14 @@
     {% if next %}
         <input type="hidden" name="next" value="{{ next }}" />
     {% endif %}
-    username:
-    <input type="text" name="username" value="{{ username}}" /><br />
-    password:
-    <input type="password" name="password" value="" /><br />
-
-    <input type="submit" value="Log In" div class="sexy-button"/>
+<table border="0px">
+    <tr><td>Username</td>
+   <td> <input type="text" name="username" value="{{ username}}" /></td>
+    </tr><tr><td>Password</td>
+    <td><input type="password" name="password" value="" /></td>
+    </tr><tr><td></td><td align='right'>
+    <input type="submit" value="Log In" div class="sexy-button"/></td>
+</tr>
+</table>
 </form>
 {% endblock %}
