sexy button for view profile

--- a/media/css/main.css
+++ b/media/css/main.css
@@ -96,7 +96,7 @@
 }
 
 #search_form #id_q{
-    width:300px;
+    width:270px;
 }
 
 #user_block {
@@ -104,11 +104,9 @@
     display:block;
     color:white;
     margin-top: 2px;
-    margin-right: 10px;
+    margin-right: 5px;
     float:right;
 }
-
-
 
 .menu1 {
     margin-top:5px;
@@ -309,6 +307,8 @@ body{
     width: 10%;
     float:left;
     position: relative;
+    margin-top:5px;
+    margin-left:5px;
 }
 
 .messages{
