--- a/templates/view_profile.html
+++ b/templates/view_profile.html
@@ -2,7 +2,7 @@
 {% block title %}Profile{% endblock %}
 {% block content %}
 <span class="big_header">
-    Information (<a href="/profile/edit">edit</a>)
+    Information <a href="/profile/edit"class="sexy-button">edit information</a>
 </span>
 <br>
 <br>
@@ -40,5 +40,5 @@
     Credit Card Number: {{ form.creditcard }}<br>
 </span>
 <br>
-<a href="/">back to main page</a>
+<a href="/" class="sexy-button">back to main page</a>
 {% endblock %}
