--- a/templates/base.html
+++ b/templates/base.html
@@ -30,7 +30,8 @@
                 {% if not user.is_authenticated %}
                     <a href='/login' class="sexy-button">Login</a> | <a href='/register' class="sexy-button">Register</a>
                 {% else %}
-                    Welcome, <a href="/profile/" class="user_block">{{ user.username }}</a><br>
+                    Welcome,<a class="user_block">{{ user.username }}</a>
+                   <a href="/profile/"  class="user_block"> </a> <a href="/profile/"  class="sexy-button">Profile</a><br>
                     <a href="/cart"><img src="/media/img/cart.jpg" height="15px" /></a>
                     {{ user.get_profile.point }} pts.  <a href='/logout' class="sexy-button">Logout</a>
                 {% endif %}
