--- a/templates/edit_category.html
+++ b/templates/edit_category.html
@@ -18,7 +18,7 @@
     <p>name: {{ form.name }}</p>
     <p>description:</p>
     <p>{{ form.description }}</p>
-    <input type="submit" value="submit" />
+    <input type="submit" value="submit" class="sexy-button" />
 </form>
 </body>
 {% endblock %}
