--- a/templates/edit_product.html
+++ b/templates/edit_product.html
@@ -16,11 +16,11 @@
     <p>{{ form.image }}</p>
     <p>amount: {{ form.amount }}</p>
     <p>order supply status: {{ form.orderSupStatus }}</p>
-    <input type="submit" value="submit" />
+    <input type="submit" value="submit"  class="sexy-button"/>
 </form>
 
 <div>
-    <a href="/product/{{ pid }}/delete">Delete this product</a>
+    <a href="/product/{{ pid }}/delete" class="sexy-button">Delete this product</a>
 </div>
 
 {% endblock %}
