--- a/media/css/backoffice_main.css
+++ b/media/css/backoffice_main.css
@@ -170,7 +170,7 @@ a.menubox:hover,a.menubox:active
 #packing tr.alt td
 {
     color:#000000;
-    background-color:#EAF2D3;
+    background-color: #979797;
 }
 
 .clearfix::after {
