--- a/templates/packingDetail.html
+++ b/templates/packingDetail.html
@@ -29,7 +29,8 @@
         {% endif %}</td></tr>
     {% endfor %}
 </table>
-    <input type="submit" value='commit' class="sexy-button"/>
+    <input type="submit" value='COMMIT' class="sexy-button"/>
+        <a href="/backoffice/packing" class="sexy-button">BACK</a>
     </form>
 </div>
 {% endblock %}
