fix sexy button

--- a/templates/checkout_finish.html
+++ b/templates/checkout_finish.html
@@ -17,5 +17,5 @@
 <span>Thank you for shopping with us!!</span>
 <br>
 <br>
-<a href="/">back to main page</a>
+<a href="/" class="sexy-button">back to main page</a>
 {% endblock %}
