--- a/templates/base.html
+++ b/templates/base.html
@@ -20,7 +20,7 @@
             <form id="search_form" action='/search' method="get">
                 <input id="id_q" type="text" name="q" maxlength="50">
                 {#{{ search_form.category }}#}
-                <input type="submit" value='go' />
+                <input type="submit" value='go' class="sexy-button" />
             </form>
         {% endblock %}
 
