--- a/templates/login_user.html
+++ b/templates/login_user.html
@@ -22,8 +22,8 @@
    <td> <input type="text" name="username" value="{{ username}}" /></td>
     </tr><tr><td>Password</td>
     <td><input type="password" name="password" value="" /></td>
-    </tr><tr><td></td><td align='right'>
-    <input type="submit" value="Log In" div class="sexy-button"/></td>
+    </tr><tr><td colspan="2" align='right'>
+    <a href='/register' class="sexy-button">Register</a> <input type="submit" value="Log In" div class="sexy-button"/></td>
 </tr>
 </table>
 </form>
