change notification success to info now have 2 type: info > green noti, error > red noti

--- a/templates/base.html
+++ b/templates/base.html
@@ -49,8 +49,8 @@
                 </div>
             {% endfor %}
 {#    {% else %}#}
-{#        <div class="tn-box tn-box-active error">#}
-{#            <p>This is test noti.</p>#}
+{#        <div id="front_message"class="tn-box tn-box-active tn-box-hoverpause info">#}
+{#            <p>This is test notification this is longgggggg.</p>#}
 {#        </div>#}
 {#        <div class="tn-box tn-box-active info">#}
 {#            <p>This is test noti.</p>#}
