--- a/templates/login_user.html
+++ b/templates/login_user.html
@@ -5,12 +5,12 @@
 {% block sidemenu %}{% endblock %}
 {% block search_bar %}{% endblock %}
 {% block content %}
-    <style>
-        body{
-            font-family:Arial,Helvetica,sans-serif;
-            font-size: 12px;
-        }
-    </style>
+{#    <style>#}
+{#        body{#}
+{#            font-family:Arial,Helvetica,sans-serif;#}
+{#            font-size: 12px;#}
+{#        }#}
+{#    </style>#}
 <form action="/login" method="post">
     <h1>Login</h1>
     {% csrf_token %}
