--- a/templates/login_employee.html
+++ b/templates/login_employee.html
@@ -1,4 +1,4 @@
-{% extends "backoffice_base.html" %}
+{% extends "login_base.html" %}
 
 {% block title %}Employee Login{% endblock %}
 
@@ -14,7 +14,7 @@
     {% if next %}
         <input type="hidden" name="next" value="{{ next }}" />
     {% endif %}
-    <table border="0px">
+    <table border="0px" align="center">
         <tr><td>Username</td>
             <td> <input type="text" name="username" value="{{ username}}" /></td>
         </tr><tr><td>Password</td>
