fix bug in packing page

--- a/templates/packing.html
+++ b/templates/packing.html
@@ -1,14 +1,14 @@
 {% extends "backoffice_base.html" %}
 
-{% block title %}Packing Management{% endblock %}
+{% block title %}Packing & Sending Management{% endblock %}
 
 {% block content %}
 <h1 xmlns="http://www.w3.org/1999/html">Packing List</h1>
 
 <table id="packing"><tr><th>Order ID</th><th>Ordered Date</th><th>Status</th><th>Action</th></tr>
 {% for order in list %}
-    <tr {% if order.status == "Wait for more products" %} class="alt" {% endif %}>
-        <td>{{ order.id }}</td><td>{{ order.timestamp }}</td><td>{{ order.status }}</td><td><form action="/backoffice/packing/{{ order.id }}">
+    <tr {% if order.2 == "Wait for more products" %} class="alt" {% endif %}>
+        <td>{{ order.0 }}</td><td>{{ order.1 }}</td><td>{{ order.2 }}</td><td><form action="/backoffice/packing/{{ order.id }}">
         {% csrf_token %}
 
         <input type="submit" value="Proceed" div class="sexy-button">
