--- a/templates/packingDetail.html
+++ b/templates/packingDetail.html
@@ -1,6 +1,6 @@
 {% extends "backoffice_base.html" %}
 
-{% block title %}Employee Packing Detail{% endblock %}
+{% block title %}Employee Packing & Sending Detail{% endblock %}
 
 
 
