--- a/templates/backoffice_base.html
+++ b/templates/backoffice_base.html
@@ -30,7 +30,7 @@
                             {% if clerk %}{{ clerk }}<br>{% endif %}
                         {% endif %}
                     </div>
-                    <a href='/logout' class="user_block sexy-button">Logout</a>
+                    <a href='/backoffice/logout' class="user_block sexy-button">Logout</a>
                 {% endif %}
             {% endblock %}
         </span>
