--- a/templates/login_employee.html
+++ b/templates/login_employee.html
@@ -1,7 +1,7 @@
 {% extends "login_base.html" %}
 
 {% block title %}Employee Login{% endblock %}
-
+{% block userblock %}{% endblock %}
 {% block content %}
 <body>
 <h1>Back Office Login</h1>
