--- a/media/css/main.css
+++ b/media/css/main.css
@@ -128,7 +128,8 @@
 
 .product_block{
     position:relative;
-    width:20%;
+    width:130px;
+    height:170px;
     margin:10px;
     float:left;
     font-size: small;
