finish Supplier management !!

--- a/templates/add_supplier.html
+++ b/templates/add_supplier.html
@@ -1,4 +1,26 @@
-<!DOCTYPE html>
+{% extends "backoffice_base.html" %}
+
+{% block title %}Add new Supplier{% endblock %}
+
+{% block content %}
+<h1>Add new Supplier</h1>
+    {% if success_msg %}
+        {{ success_msg }}
+    {% elif form_error_msg %}
+        {{ form_error_msg }}
+    {% endif %}
+
+    <form action="/supplier/new" method="POST">
+        {% csrf_token %}
+        <p>add new supplier</p>
+        <p>company name: {{ form.company_name }}</p>
+        <p>contact: {{ form.contact }}</p>
+        <input type="submit" value="Submit" class="sexy-button">
+    </form>
+{% endblock %}
+
+
+<!--<!DOCTYPE html>
 <html>
 <head>
     <title>add new supplier</title>
@@ -19,3 +41,4 @@
     </form>
 </body>
 </html>
+-->
