--- a/templates/edit_supplier.html
+++ b/templates/edit_supplier.html
@@ -1,4 +1,20 @@
-<!DOCTYPE html>
+{% extends "backoffice_base.html" %}
+
+{% block title %}Edit Supplier{% endblock %}
+
+{% block content %}
+<h1>Edit Supplier</h1>
+    <form action="/supplier/{{ sid }}/edit" method="POST">
+        {% csrf_token %}
+        <p>edit category: {{ sid }}</p>
+        <p>company name: {{ form.company_name }}</p>
+        <p>contact: {{ form.contact }}</p>
+        <input type="submit" value="Submit"div class="sexy-button">
+    </form>
+    <a href="/supplier/{{ sid }}/delete">Delete this supplier</a>
+{% endblock %}
+
+<!--<!DOCTYPE html>
 <html>
 <head>
     <title>edit supplier: {{ sid }}</title>
@@ -13,3 +29,4 @@
     </form>
 </body>
 </html>
+-->
