[Visual UI] Add reflected style for login block

--- a/templates/login_base.html
+++ b/templates/login_base.html
@@ -53,7 +53,7 @@
     <div class="clearfix"></div>
 
     <div id="middle" class="clearfix">
-        <div id="login-block">
+        <div id="login-block" class="reflected">
             {% block content %}
 
             {% endblock %}
