--- a/templates/edit_supplier.html
+++ b/templates/edit_supplier.html
@@ -10,8 +10,8 @@
         <p>company name: {{ form.company_name }}</p>
         <p>contact: {{ form.contact }}</p>
         <input type="submit" value="Submit"div class="sexy-button">
+        <a href="/supplier/{{ sid }}/delete" class='sexy-button'>Delete this supplier</a>
     </form>
-    <a href="/supplier/{{ sid }}/delete">Delete this supplier</a>
 {% endblock %}
 
 <!--<!DOCTYPE html>
