--- a/templates/managesupplier.html
+++ b/templates/managesupplier.html
@@ -4,6 +4,7 @@
 
 {% block content %}
 <h1>Supplier Management</h1>
+    <a href="/supplier/new" class='sexy-button'>New</a>
     <table id="packing">
     <tr><th>Company Name</th><th>Contact</th></tr>
         {% for supplier in supplier_list %}
